semgrep, amass enabled again

--- a/stb-green.yaml
+++ b/stb-green.yaml
@@ -12,7 +12,7 @@ contents:
     - py3-pip
     - python3
     # sast
-    # - semgrep
+    - semgrep
     # sbom
     - syft
     # k8s & container security
@@ -25,4 +25,4 @@ accounts:
   users:
     - username: nonroot
       uid: 65532
-  run-as: nonroot
+  run-as: 65532
