--- a/stb-red.yaml
+++ b/stb-red.yaml
@@ -20,8 +20,10 @@ contents:
     - trivy
     # reconnaissance
     - nmap
+    - amass
     - nuclei
     - gobuster
+      # - exploitdb
     # credential access
     - jwt-tool
     # exfiltration
@@ -33,4 +35,8 @@ accounts:
   users:
     - username: nonroot
       uid: 65532
-  run-as: nonroot
+  run-as: 65532
+paths:
+  - path: /opt/exploitdb
+    type: directory
+    permissions: 0o777
