semgrep moved to wolfi os. semgrep melange steps was removed

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -30,7 +30,8 @@ jobs:
         run: |
           sudo mkdir -p /etc/apk/keys
        
-      
+      - uses: chainguard-dev/actions/setup-melange@main
+
       - name: melange key generate
         uses: chainguard-dev/actions/melange-keygen@main
 
