set default user of stb-green as root

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -55,7 +55,7 @@ jobs:
         with:
           config: stb-green.yaml
           archs: x86_64
-          tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}
+          tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-delete-me
       
             #      - name: red build and push image
             #        uses: distroless/actions/apko-publish@main
