--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -25,46 +25,8 @@ jobs:
       - name: checkot repository
         uses: actions/checkout@v3
         
-      # will be remove
-      #      - name: create apk keys folder
-      #        run: |
-      #          sudo mkdir -p /etc/apk/keys
-      #       
-      #      - uses: chainguard-dev/actions/setup-melange@main
-      #
-      #      - name: melange key generate
-      #        uses: chainguard-dev/actions/melange-keygen@main
-      #
-      #- name: build all apk packages
-      #  uses: chainguard-dev/actions/melange-build@main
-      #  with:
-      #    config: ''
-      #    multi-config: ${{ github.workspace }}/tools/semgrep.yaml
-      #    archs: x86_64
-      #    sign-with-temporary-key: true
-      #    signing-key-path: ${{ github.workspace }}/melange.rsa
-      #    repository-path: ${{ github.workspace }}/packages
-      #    repository-append: ${{ github.workspace }}/packages
-      #    keyring-append: ''
-      #    namespace: ''
-      #    empty-workspace: false
-      #    workdir: ''
-        
       - name: green build and push image
         uses: distroless/actions/apko-publish@main
         with:
           config: stb-green.yaml
-          archs: x86_64
-          tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}
-          package-version-tag-stem: true 
-            #      - name: red build and push image
-            #        uses: distroless/actions/apko-publish@main
-            #        with:
-            #          config: stb-red.yaml
-            #          archs: x86_64
-            #          tag: ghcr.io/ahmetak4n/security-tool-box:stb-red-${{ github.sha }}
-            #          repository-append: packages
-            #          keyring-append: melange.rsa.pub
-            #          use-docker-mediatypes: false
-            #
-            #
+          tag: ghcr.io/ahmetak4n/security-tool-box:stb-green
