--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -31,3 +31,4 @@ jobs:
           config: stb-green.yaml
           archs: amd64
           tag: ghcr.io/ahmetak4n/security-tool-box:stb-green
+          debug: true
