--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -31,4 +31,5 @@ jobs:
           config: stb-green.yaml
           archs: amd64
           tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}
+          package-version-tag-stem: true
           debug: true
