--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -30,6 +30,5 @@ jobs:
         with:
           config: stb-green.yaml
           archs: amd64
-          tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}
-          package-version-tag-stem: true
+          package-version-tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}
           debug: true
