--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -26,9 +26,9 @@ jobs:
         uses: actions/checkout@v3
         
       - name: green build and push image
-        uses: distroless/actions/apko-build@main
+        uses: distroless/actions/apko-snapshot@main
         with:
           config: stb-green.yaml
           archs: amd64
-          package-version-tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}
+          tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}
           debug: true
