--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -30,5 +30,6 @@ jobs:
         with:
           config: stb-green.yaml
           archs: amd64
-          tag: ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}
+          base-tag: ghcr.io/ahmetak4n/security-tool-box 
+          target-tag: stb-green-${{ github.sha }}
           debug: true
