set default user of stb-green as root

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -24,12 +24,18 @@ jobs:
     steps:
       - name: checkot repository
         uses: actions/checkout@v3
-        
-      - name: green build and push image
-        uses: distroless/actions/apko-snapshot@main
-        with:
-          config: stb-green.yaml
-          archs: amd64
-          base-tag: ghcr.io/ahmetak4n/security-tool-box 
-          target-tag: stb-green-${{ github.sha }}
-          debug: true
+      
+      - name: apko build
+        shell: bash
+        run : |
+          docker run -i --rm --entrypoint /bin/sh \
+          -v $PWD:${{ github.workspace }} --workdir ${{ github.workspace }} \
+        ghcr.io/wolfi-dev/apko:latest build stb-green.yaml stb-green:test stb-green.tar
+
+        #      - name: green build and push image
+        #        uses: distroless/actions/apko-snapshot@main
+        #        with:
+        #          config: stb-green.yaml
+        #          archs: amd64
+        #          base-tag: ghcr.io/ahmetak4n/security-tool-box 
+        #          target-tag: stb-green-${{ github.sha }}
