--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -24,10 +24,12 @@ jobs:
     steps:
       - name: checkot repository
         uses: actions/checkout@v3
-      
-      - name: green build image
-        uses: distroless/actions/apko-publish@main
-        with:
-          config: stb-green.yaml
-          archs: amd64,arm64,x86_64
-          tag: ghcr.io/ahmetak4n/security-tool-box/stb-green-${{ github.sha }} 
+      - name: apko build
+        run: |
+          docker -h
+          # - name: green build image
+          #   uses: distroless/actions/apko-build@main
+          #   with:
+          #     config: stb-green.yaml
+          #     archs: amd64,arm64,x86_64
+          #     tag: ghcr.io/ahmetak4n/security-tool-box/stb-green-${{ github.sha }} 
