apko build step was updated

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -26,8 +26,14 @@ jobs:
         uses: actions/checkout@v3
       - name: apko build
         run: |
-          docker -h
-          # - name: green build image
+          docker run --rm \
+            -v $PWD:${{ github.workspace }} \
+            -v /tmp:/tmp \
+            ghcr.io/wolfi-dev/apko:latest build ghcr.io/ahmetak4n/security-tool-box/stb-green-${{ github.sha }} stb-green-output.tar
+          docker load < stb-green-output.tar
+          docker push ghcr.io/ahmetak4n/security-tool-box/stb-green-${{ github.sha }}
+
+        # - name: green build image
           #   uses: distroless/actions/apko-build@main
           #   with:
           #     config: stb-green.yaml
