--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -27,8 +27,8 @@ jobs:
       - name: apko build
         run: |
           docker run --rm \
-            -v ${PWD}:${{ github.workspace }} \
-            -w ${PWD}:${{ github.workspace }} \
+            -v $PWD:${{ github.workspace }} \
+            -w ${{ github.workspace }} \
             ghcr.io/wolfi-dev/apko:latest build stb-green.yaml ghcr.io/ahmetak4n/security-tool-box/stb-green-${{ github.sha }} stb-green-output.tar
           docker load < stb-green-output.tar
           docker push ghcr.io/ahmetak4n/security-tool-box/stb-green-${{ github.sha }}
