--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -29,9 +29,9 @@ jobs:
           docker run --rm \
             -v $PWD:${{ github.workspace }} \
             -w ${{ github.workspace }} \
-            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml --arch arm64,amd64,x86_64 ghcr.io/ahmetak4n/security-tool-box/stb-green-${{ github.sha }} stb-green-output.tar
+            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml --arch arm64,amd64,x86_64 ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }} stb-green-output.tar
           docker load < stb-green-output.tar
-          docker images 
+          docker push --all-tags ghcr.io/ahmetak4n/security-tool-box 
         # - name: green build image
           #   uses: distroless/actions/apko-build@main
           #   with:
