--- a/.github/workflows/Build Stb Green.yml
+++ b/.github/workflows/Build Stb Green.yml
@@ -3,18 +3,20 @@ name: Build
 on:
   push:
     branches: [ "main" ]
-    paths-ignore:
-      - 'README.md'
-      - '.github/workflows/*'
+    paths:
+      - "stb-green.yaml"
+  
   pull_request:
     branches: [ "main" ]
+    paths:
+      - "stb-green.yaml"
     
   workflow_dispatch:
 
 jobs:
 
   build:
-    name: build
+    name: Build
     runs-on: ubuntu-latest
     
     permissions:
@@ -22,17 +24,17 @@ jobs:
       contents: read
 
     steps:
-      - name: checkot repository
+      - name: Checkot Repository
         uses: actions/checkout@v3
 
-      - name: Login to GitHub Container Registry
+      - name: Login GCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: apko build
+      - name: Apko Build & Docker Push
         run: |
           docker run --rm \
             -v $PWD:${{ github.workspace }} \
@@ -40,9 +42,3 @@ jobs:
             ghcr.io/wolfi-dev/apko:latest build stb-green.yaml --arch arm64,amd64,x86_64 ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }} stb-green-output.tar
           docker load < stb-green-output.tar
           docker push --all-tags ghcr.io/ahmetak4n/security-tool-box 
-        # - name: green build image
-          #   uses: distroless/actions/apko-build@main
-          #   with:
-          #     config: stb-green.yaml
-          #     archs: amd64,arm64,x86_64
-          #     tag: ghcr.io/ahmetak4n/security-tool-box/stb-green-${{ github.sha }} 
