--- a/.github/workflows/Build Stb Green.yml
+++ b/.github/workflows/Build Stb Green.yml
@@ -39,6 +39,7 @@ jobs:
           docker run --rm \
             -v $PWD:${{ github.workspace }} \
             -w ${{ github.workspace }} \
-            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml --arch arm64,amd64,x86_64 ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }} stb-green-output.tar
+            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml --arch arm64,amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }} stb-green-output.tar
           docker load < stb-green-output.tar
+          docker tag ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}-amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}  
           docker push --all-tags ghcr.io/ahmetak4n/security-tool-box 
