--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -30,9 +30,11 @@ jobs:
           docker run --rm \
             -v $PWD:${{ github.workspace }} \
             -w ${{ github.workspace }} \
-            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml --arch arm64,amd64,x86_64 ghcr.io/ahmetak4n/security-tool-box:stb-green-${{github.ref_name}} stb-green-output.tar
+            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml --arch arm64,amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-${{github.ref_name}} stb-green-output.tar
           docker load < stb-green-output.tar
+          docker tag  ghcr.io/ahmetak4n/security-tool-box:stb-green-${{github.ref_name}}-amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-${{github.ref_name}}  
           docker push --all-tags ghcr.io/ahmetak4n/security-tool-box
+          DIGEST=(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-${{github.ref_name}})
 
       - name: Stb Red Apko Build & Docker Push
         run: |
