Cosign Steps Were Added

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -3,7 +3,9 @@ name: Release
 on:
   release:
     types: [ created ]
-    
+  
+  workflow_dispatch:  
+
 jobs:
 
   build:
@@ -17,6 +19,11 @@ jobs:
     steps:
       - name: Checkot Repository
         uses: actions/checkout@v3
+
+      - name: Cosign Install
+        uses: sigstore/cosign-installer@v3.1.1
+        with:
+          cosign-release: 'v2.1.1'
       
       - name: Login GCR
         uses: docker/login-action@v3
@@ -35,12 +42,17 @@ jobs:
           docker tag  ghcr.io/ahmetak4n/security-tool-box:stb-green-${{github.ref_name}}-amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-${{github.ref_name}}  
           docker push --all-tags ghcr.io/ahmetak4n/security-tool-box
           DIGEST=(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-${{github.ref_name}})
+          DIGEST=(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-${{github.ref_name}})-arm64
+          cosign sign --yes --key env://COSIGN_PRIVATE_KEY ${DIGEST}
+        env:
+          COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
+          COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
 
       - name: Stb Red Apko Build & Docker Push
         run: |
           docker run --rm \
             -v $PWD:${{ github.workspace }} \
             -w ${{ github.workspace }} \
-            ghcr.io/wolfi-dev/apko:latest build stb-red.yaml --arch arm64,amd64,x86_64 ghcr.io/ahmetak4n/security-tool-box:stb-red-${{github.ref_name}} stb-red-output.tar
+            ghcr.io/wolfi-dev/apko:latest build stb-red.yaml --arch arm64,amd64 ghcr.io/ahmetak4n/security-tool-box:stb-red-${{github.ref_name}} stb-red-output.tar
           docker load < stb-red-output.tar
           docker push --all-tags ghcr.io/ahmetak4n/security-tool-box 
