--- a/.github/workflows/Build Stb Green.yml
+++ b/.github/workflows/Build Stb Green.yml
@@ -25,7 +25,7 @@ jobs:
 
     steps:
       - name: Checkot Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
 
       - name: Login GCR
         uses: docker/login-action@v3
@@ -36,6 +36,7 @@ jobs:
       
       - name: Apko Build & Docker Push
         run: |
+          # apko build
           docker run --rm \
             -v $PWD:${{ github.workspace }} \
             -w ${{ github.workspace }} \
