--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -39,7 +39,7 @@ jobs:
             -w ${{ github.workspace }} \
             ghcr.io/wolfi-dev/apko:latest build stb-green.yaml --arch arm64,amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-demo stb-green-output.tar
           docker load < stb-green-output.tar
-          docker tag  ghcr.io/ahmetak4n/security-tool-box:stb-green-${{github.ref_name}}-amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-demo  
+          docker tag  ghcr.io/ahmetak4n/security-tool-box:stb-green-demo-amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-demo  
           docker push --all-tags ghcr.io/ahmetak4n/security-tool-box
           DIGEST=(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-demo)
           DIGEST=(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-demo-arm64)
