--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -41,9 +41,9 @@ jobs:
           docker load < stb-green-output.tar
           docker tag  ghcr.io/ahmetak4n/security-tool-box:stb-green-demo-amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-demo  
           docker push --all-tags ghcr.io/ahmetak4n/security-tool-box
-          DIGEST=(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-demo)
-          DIGEST=(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-demo-arm64)
-          cosign sign --yes --key env://COSIGN_PRIVATE_KEY ${DIGEST}
+          DIGEST=(docker inspect --format='{{.RepoDigests}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-demo)
+          DIGEST=(docker inspect --format='{{.RepoDigests}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-demo-arm64)
+          cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${DIGEST}"
         env:
           COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
