--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -37,14 +37,12 @@ jobs:
           docker run --rm \
             -v $PWD:${{ github.workspace }} \
             -w ${{ github.workspace }} \
-            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml --arch arm64,amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-demo stb-green-output.tar
+            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml --arch amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-demo stb-green-output.tar
           docker load < stb-green-output.tar
           docker tag  ghcr.io/ahmetak4n/security-tool-box:stb-green-demo-amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-demo  
           docker push --all-tags ghcr.io/ahmetak4n/security-tool-box
           DIGEST=$(docker inspect --format='{{.RepoDigests}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-demo)
-          DIGEST_ARM64=$(docker inspect --format='{{.RepoDigests}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-demo-arm64)
           cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${DIGEST}"
-          cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${DIGEST_ARM64}"
         env:
           COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
