--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -39,9 +39,8 @@ jobs:
             -w ${{ github.workspace }} \
             ghcr.io/wolfi-dev/apko:latest build stb-green.yaml --arch amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-demo stb-green-output.tar
           docker load < stb-green-output.tar
-          docker tag  ghcr.io/ahmetak4n/security-tool-box:stb-green-demo-amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-demo  
-          docker push --all-tags ghcr.io/ahmetak4n/security-tool-box
-          DIGEST=$(docker inspect --format='{{.RepoDigests}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-demo)
+          docker push ghcr.io/ahmetak4n/security-tool-box:stb-green-demo-amd64
+          DIGEST=$(docker inspect --format='{{.RepoDigests}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-demo-amd64)
           cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${DIGEST}"
         env:
           COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
