--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -37,10 +37,13 @@ jobs:
           docker run --rm \
             -v $PWD:${{ github.workspace }} \
             -w ${{ github.workspace }} \
-            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml --arch amd64 ghcr.io/ahmetak4n/security-tool-box:stb-green-demo stb-green-output.tar
+            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }} stb-green-output.tar --arch amd64
+          
           docker load < stb-green-output.tar
+          
           docker push ghcr.io/ahmetak4n/security-tool-box:stb-green-demo-amd64
-          DIGEST=$(docker inspect --format='{{.RepoDigests}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-demo-amd64)
+          
+          DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }})
           cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${DIGEST}"
         env:
           COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
