--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -37,14 +37,16 @@ jobs:
           docker run --rm \
             -v $PWD:${{ github.workspace }} \
             -w ${{ github.workspace }} \
-            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }} stb-green-output.tar --arch amd64
+            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }} stb-green-output.tar --arch amd64,arm64 
           
-          docker load < stb-green-output.tar 
-          docker push ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}-amd64
-          
-          DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}-amd64)
-          
-          cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${DIGEST}"
+          docker load < stb-green-output.tar  
+          docker push --all-tags ghcr.io/ahmetak4n/security-tool-box
+
+          DIGEST_AMD64=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}-amd64) 
+          DIGEST_ARM64=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}-arm64)
+
+          cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${DIGEST_AMD64}"
+          cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${DIGEST_ARM64}"
         env:
           COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
