--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -37,13 +37,13 @@ jobs:
           docker run --rm \
             -v $PWD:${{ github.workspace }} \
             -w ${{ github.workspace }} \
-            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }} stb-green-output.tar --arch amd64,arm64 
+            ghcr.io/wolfi-dev/apko:latest build stb-green.yaml ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.ref_name }} stb-green-output.tar --arch amd64,arm64 
           
           docker load < stb-green-output.tar  
           docker push --all-tags ghcr.io/ahmetak4n/security-tool-box
 
-          DIGEST_GREEN_AMD64=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}-amd64) 
-          DIGEST_GREEN_ARM64=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.sha }}-arm64)
+          DIGEST_GREEN_AMD64=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.ref_name }}-amd64) 
+          DIGEST_GREEN_ARM64=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-green-${{ github.ref_name }}-arm64)
 
           cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${DIGEST_GREEN_AMD64}"
           cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${DIGEST_GREEN_ARM64}"
@@ -56,13 +56,13 @@ jobs:
           docker run --rm \
             -v $PWD:${{ github.workspace }} \
             -w ${{ github.workspace }} \
-            ghcr.io/wolfi-dev/apko:latest build stb-red.yaml ghcr.io/ahmetak4n/security-tool-box:stb-red-${{github.sha}} stb-red-output.tar --arch arm64,amd64 
+            ghcr.io/wolfi-dev/apko:latest build stb-red.yaml ghcr.io/ahmetak4n/security-tool-box:stb-red-${{ github.ref_name }} stb-red-output.tar --arch arm64,amd64 
           
           docker load < stb-red-output.tar  
           docker push --all-tags ghcr.io/ahmetak4n/security-tool-box
 
-          DIGEST_RED_AMD64=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-red-${{ github.sha }}-amd64) 
-          DIGEST_RED_ARM64=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-red-${{ github.sha }}-arm64)
+          DIGEST_RED_AMD64=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-red-${{ github.ref_name }}-amd64) 
+          DIGEST_RED_ARM64=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ahmetak4n/security-tool-box:stb-red-${{ github.ref_name }}-arm64)
 
           cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${DIGEST_RED_AMD64}"
           cosign sign --yes --key env://COSIGN_PRIVATE_KEY "${DIGEST_RED_ARM64}"
